--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -49,11 +49,81 @@
 
         <div class="application__container" id="Application_Reject">
           <div class="application__title">Reject / ปฏิเสธ</div>
-          <ul class="application__list"></ul>
+          <ul class="application__list">
+            <a href="edit#1" class="application__item">
+              <div class="application__detail">
+                <div class="application__name">${application.name}</div>
+                <span class="application__date">${application.date}</span>
+              </div>
+              <div class="application__action">
+                <button class="button button__danger button__cancel" data-application-id="1">ลบ / ยกเลิกแบบฟอร์ม</button>
+              </div>
+            </a>
+          </ul>
         </div>
       </div>
     </main>
+
+    <!-- โครงสร้างป๊อปอัปสำหรับยกเลิกคำร้อง -->
+    <div id="cancelPopup" class="popup">
+      <div class="popup-content">
+        <h2>ยืนยันการยกเลิกคำร้อง</h2>
+        <p>คุณต้องการยกเลิกคำร้องนี้หรือไม่?</p>
+        <div class="popup__action">
+          <button id="confirmCancel" class="button button__confirm">ยืนยัน</button>
+          <button id="closePopup" class="button button__cancel">ยกเลิก</button>
+        </div>
+      </div>
+    </div>
   </body>
+  </body>
+  <script>
+    document.querySelectorAll(".button__cancel").forEach((button) => {
+      button.addEventListener("click", (event) => {
+        event.preventDefault();
+        const applicationId = event.target.getAttribute("data-application-id");
+        showPopup(applicationId);
+      });
+    });
+
+    document.getElementById("confirmCancel").addEventListener("click", () => {
+      const applicationId = document.getElementById("confirmCancel").getAttribute("data-application-id");
+      console.log(applicationId);
+    });
+
+    document.getElementById("closePopup").addEventListener("click", () => {
+      hidePopup();
+    });
+
+    const showPopup = (applicationId) => {
+      const popup = document.getElementById("cancelPopup");
+      popup.style.display = "block";
+      document.getElementById("confirmCancel").setAttribute("data-application-id", applicationId);
+    };
+
+    const hidePopup = () => {
+      const popup = document.getElementById("cancelPopup");
+      popup.style.display = "none";
+    };
+
+    window.onclick = (event) => {
+      const popup = document.getElementById("cancelPopup");
+      if (event.target === popup) {
+        popup.style.display = "none";
+        const applicationId = target.getAttribute("data-application-id");
+        fetch(`http://localhost:8080/api/applications/${applicationId}`, {
+          method: "DELETE",
+          headers: {
+            "Content-Type": "application/json",
+          }
+        })
+        .then((response) => response.json())
+        .then((data) => {
+          console.log(data);
+        });
+      }
+    };
+  </script>
   <script>
     const ApproveFilterButton = document.getElementById("ApproveFilterButton");
     const PendingFilterButton = document.getElementById("PendingFilterButton");
