fix: fixed file path

--- a/frontend/public/HTML/edit.html
+++ b/frontend/public/HTML/edit.html
@@ -7,9 +7,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../CSS/formLayout.css">
-    <link rel="stylesheet" href="../CSS/style.css">
-    <link rel="stylesheet" href="../CSS/naviStyle.css">
+    <link rel="stylesheet" href="../css/formLayout.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/naviStyle.css">
 </head>
 <body>
     <div class="side-nav">
@@ -26,8 +26,8 @@
             <!-- The form content will be loaded here -->
         </div>
     </div>
-    <script src="../JS/formLoader.js"></script>
-    <script src="../JS/formCaller.js"></script>
-    <script src="../JS/saveAndLoadData.js"></script>
+    <script src="../js/formLoader.js"></script>
+    <script src="../js/formCaller.js"></script>
+    <script src="../js/saveAndLoadData.js"></script>
 </body>
 </html>
