--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,27 +3,45 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
     <title>คำร้องของฉัน</title>
-    <link rel="stylesheet" href="./css/styles.css">
-    <link rel="stylesheet" href="./css/dashboard.css">
+    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/template.css">
+    <link rel="stylesheet" href="/css/dashboard.css">
   </head>
   <body>
-    <div class="wrapper">
-      <div class="sidebar">
-        <ul>
-          <li>
-          </li>
-        </ul>
+    <div class="sidebar">
+      <img
+        src="../img/Thammasat_Horz_logo_route1_01 1.png"
+        alt="Thammasat University Logo"
+      />
+      <div class="menu">
+        <a href="/index.html">คำร้องของฉัน</a>
+        <a href="#">แบบร่าง</a>
+        <a href="/template/template.html">สร้างคำร้อง</a>
       </div>
-    <main>
-      <div class="header">
-        <h1>คำร้องของฉัน</h1>
-        <span>แสดงสถานะคำร้องของแบบฟอร์ม</span>
-      </div>
-      <div class="browser__container">
-        <div class="browser__title">
-          <span>สืบค้นสถานะคำร้อง</span>
+      <a class="logout" onclick="logout()">Log out</a>
+    </div>
+
+    <div class="content">
+      <div class="header__container">
+        <div>
+          <h1>คำร้องของฉัน</h1>
+          <p>แสดงสถานะคำร้องของแบบฟอร์ม</p>
         </div>
+        <button class="create__button" onclick="document.location = '/template/template.html'">+ สร้างคำร้อง</button>
+      </div>
+        <div class="browser__container">
+          <div class="browser__title">
+            <span>สืบค้นสถานะคำร้อง</span>
+          </div>
+      
+        
         <div class="filter">
           <button class="button button__filter" id="ApproveFilterButton">Approved</button>
           <button class="button button__filter" id="PendingFilterButton">Pending</button>
@@ -62,8 +80,7 @@
           </ul>
         </div>
       </div>
-    </main>
-
+    </div>
     <!-- โครงสร้างป๊อปอัปสำหรับยกเลิกคำร้อง -->
     <div id="cancelPopup" class="popup">
       <div class="popup-content">
