--- a/frontend/public/login.html
+++ b/frontend/public/login.html
@@ -1,73 +1,143 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-    <title>Login Page</title>
-    <link rel="stylesheet" href="css/loginpage_styles.css" />
-  </head>
-  <body>
-    <div class="overlay"></div>
-    <div class="login-container">
-      <div class="login-box">
-        <div class="title-container">
-          <div class="text-container">
-            <h1>LOGIN</h1>
-            <p>request form</p>
-          </div>
-          <img src="img/Emblem_of_Thammasat_University.svg.png" alt="Logo" class="logo"/>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900&display=swap"
+            rel="stylesheet"
+        />
+        <title>Login Page</title>
+        <link rel="stylesheet" href="css/loginpage_styles.css" />
+        <script>
+            document.addEventListener("DOMContentLoaded", function () {
+                // Redirect to index if user is already logged in
+                const isLoggedIn = sessionStorage.getItem("isLoggedIn");
+                if (isLoggedIn) {
+                    window.location.href = "/index.html";
+                }
+            });
+
+            function togglePassword() {
+                const passwordInput = document.getElementById("password");
+                const passwordIcon = document.getElementById("password-icon");
+                if (passwordInput.type === "password") {
+                    passwordInput.type = "text";
+                    passwordIcon.src = "img/hide.png"; // Change to "hide" icon
+                } else {
+                    passwordInput.type = "password";
+                    passwordIcon.src = "img/view.png"; // Change back to "view" icon
+                }
+            }
+
+            function submitLogin() {
+                // Example login logic (replace with actual login code)
+                const username = document.getElementById("username").value;
+                const password = document.getElementById("password").value;
+
+                // Check for valid credentials
+                if (username && password) {
+                    sessionStorage.setItem("isLoggedIn", "true");
+                    // Redirect to home page and update history to prevent back navigation
+                    window.location.href = "/index.html";
+                    window.history.pushState(null, null, window.location.href);
+                } else {
+                    showPopup(
+                        "Error",
+                        "Please enter a valid username and password."
+                    );
+                }
+            }
+
+            // Prevent going back to the login page if logged in
+            window.addEventListener("popstate", function () {
+                const isLoggedIn = sessionStorage.getItem("isLoggedIn");
+                if (isLoggedIn) {
+                    window.location.href = "/index.html";
+                }
+            });
+
+            function showPopup(title, message) {
+                document.getElementById("popup").style.display = "block";
+                document.getElementById(
+                    "popup-message"
+                ).innerHTML = `<h2>${title}</h2><p>${message}</p>`;
+            }
+
+            function closePopup() {
+                document.getElementById("popup").style.display = "none";
+            }
+        </script>
+    </head>
+    <body>
+        <div class="overlay"></div>
+        <div class="login-container">
+            <div class="login-box">
+                <div class="title-container">
+                    <div class="text-container">
+                        <h1>LOGIN</h1>
+                        <p>request form</p>
+                    </div>
+                    <img
+                        src="img/Emblem_of_Thammasat_University.svg.png"
+                        alt="Logo"
+                        class="logo"
+                    />
+                </div>
+                <form id="loginForm">
+                    <label for="username">Username</label>
+                    <input
+                        type="text"
+                        id="username"
+                        name="username"
+                        placeholder="enter your student ID"
+                        required
+                    />
+
+                    <label for="password">Password</label>
+                    <div class="password-container">
+                        <input
+                            type="password"
+                            id="password"
+                            name="password"
+                            placeholder="enter your password"
+                            required
+                        />
+                        <span
+                            class="toggle-password"
+                            onclick="togglePassword()"
+                        >
+                            <img
+                                src="img/view.png"
+                                alt="Toggle Password"
+                                id="password-icon"
+                            />
+                        </span>
+                    </div>
+
+                    <button
+                        type="button"
+                        onclick="submitLogin()"
+                        class="login-button"
+                    >
+                        LOGIN
+                    </button>
+                </form>
+            </div>
         </div>
-        <form id="loginForm">
-          <label for="username">Username</label>
-          <input
-            type="text"
-            id="username"
-            name="username"
-            placeholder="enter your student ID"
-            required
-          />
 
-          <label for="password">Password</label>
-          <div class="password-container">
-            <input
-              type="password"
-              id="password"
-              name="password"
-              placeholder="enter your password"
-              required
-            />
-            <span class="toggle-password" onclick="togglePassword()">
-              <img
-                src="img/view.png"
-                alt="Toggle Password"
-                id="password-icon"
-              />
-            </span>
-          </div>
+        <!-- Overlay -->
+        <div id="overlay"></div>
 
-          <button type="button" onclick="submitLogin()" class="login-button">
-            LOGIN
-          </button>
-        </form>
-      </div>
-    </div>
+        <!-- Popup -->
+        <div id="popup" style="display: none">
+            <div id="popup-icon">✖</div>
+            <div id="popup-message"></div>
+            <button id="popup-ok" onclick="closePopup()">OK</button>
+        </div>
 
-    <!-- Overlay -->
-    <div id="overlay"></div>
-
-    <!-- Popup -->
-    <div id="popup">
-      <div id="popup-icon">✖</div>
-      <div id="popup-message">
-        <h2>Error</h2>
-        <p>There was an error processing your request.</p>
-      </div>
-      <button id="popup-ok" onclick="closePopup()">OK</button>
-    </div>
-
-    <script src="js/login.js"></script>
-  </body>
+        <script src="js/login.js"></script>
+    </body>
 </html>
