--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -9,6 +9,9 @@
       href="https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <title>คำร้องของฉัน</title>
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/css/template.css">
@@ -34,7 +37,7 @@
           <h1>คำร้องของฉัน</h1>
           <p>แสดงสถานะคำร้องของแบบฟอร์ม</p>
         </div>
-        <button class="create__button" onclick="document.location = '/template/template.html'">+ สร้างคำร้อง</button>
+        <button class="create__button" onclick="document.location = '/template/template.html'"><span class="plus-icon">&#10010;</span>สร้างคำร้อง</button>
       </div>
         <div class="browser__container">
           <div class="browser__title">
