--- a/frontend/public/form/delayed_registration.html
+++ b/frontend/public/form/delayed_registration.html
@@ -77,13 +77,7 @@
             <label for="year" class="form-label"
               >ชั้นปี <span class="required">*</span></label
             >
-            <input
-              type="text"
-              id="year"
-              class="form-input"
-              placeholder="ชั้นปี"
-              required
-            />
+            <input type="text" id="year" name="year" class="form-input" placeholder="ชั้นปี" required />
           </div>
           <div class="form-group">
             <label for="faculty" class="form-label"
