--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="th">
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -17,7 +17,10 @@
 </head>
 <body>
   <div class="sidebar">
-    <img src="../img/Thammasat_Horz_logo_route1_01 1.png" alt="Thammasat University Logo" />
+    <img
+      src="../img/Thammasat_Horz_logo_route1_01 1.png"
+      alt="Thammasat University Logo"
+    />
     <div class="menu">
       <a href="/index.html">คำร้องของฉัน</a>
       <a href="#">แบบร่าง</a>
