fix: style sidebar

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -13,21 +13,19 @@
   <title>คำร้องของฉัน</title>
   <link rel="stylesheet" href="/css/main.css">
   <link rel="stylesheet" href="/css/template.css">
-  <link rel="stylesheet" href="/css/dashboard.css">
-</head>
-<body>
-  <div class="sidebar">
-    <img
-      src="../img/Thammasat_Horz_logo_route1_01 1.png"
-      alt="Thammasat University Logo"
-    />
-    <div class="menu">
-      <a href="/index.html">คำร้องของฉัน</a>
-      <a href="#">แบบร่าง</a>
-      <a href="/template/template.html">สร้างคำร้อง</a>
+  </head>
+  <body>
+    <div class="sidebar">
+      <img
+        src="/img/Thammasat_Horz_logo_route1_01 1.png"
+        alt="Thammasat University Logo"
+      />
+      <div class="menu">
+        <a href="/index.html">คำร้องของฉัน</a>
+        <a href="/template/template.html">สร้างคำร้อง</a>
+      </div>
+      <a class="logout" onclick="logout()">Log out</a>
     </div>
-    <a class="logout" onclick="logout()">Log out</a>
-  </div>
 
   <div class="content">
     <div class="header__container">
