--- a/frontend/public/form/delayed_registration.html
+++ b/frontend/public/form/delayed_registration.html
@@ -35,13 +35,7 @@
             <label for="date" class="form-label"
               >วันที่ <span class="required">*</span></label
             >
-            <input
-              type="date"
-              id="date"
-              class="form-input"  
-              placeholder="DD/MM/YYYY"
-              required
-            />
+            <input type="date" id="date" name="date" class="form-input" placeholder="DD/MM/YYYY" required />
           </div>
           <div class="form-group">
             <label for="subject" class="form-label"
